@@ -1043,6 +1043,7 @@ static SyscallTableEntry syscall_main_table[] = {
    LINXY(__NR_accept4,           sys_accept4),           // 242
    GENXY(__NR_wait4,             sys_wait4),             // 260
 
+   LINXY(__NR_sendmmsg,          sys_sendmmsg),          // 269
    LINXY(__NR_process_vm_readv,  sys_process_vm_readv),  // 270
    LINX_(__NR_process_vm_writev, sys_process_vm_writev), // 271
    LINXY(__NR_getrandom,         sys_getrandom),         // 278
