@@ -1156,6 +1156,8 @@ static SyscallTableEntry syscall_table[] = {
 
    LINXY(__NR_clock_adjtime,     sys_clock_adjtime),    // 347
 
+   LINXY(__NR_sendmmsg,          sys_sendmmsg),         // 349
+
    LINXY(__NR_process_vm_readv,  sys_process_vm_readv), // 351
    LINX_(__NR_process_vm_writev, sys_process_vm_writev),// 352
 
